# search_article_with_word

./: Cargo.toml  README.md
src/: lib.rs  main.rs  search.rs
