[package]
name = "search_article_with_word"
version = "0.1.0"
edition = "2021"
authors = ["Naoki Kaneko <puripuri2100@gmail.com>"]
repository = "https://github.com/japanese-law-analysis/search_article_with_word.git"
description = "法律のXMLファイルがあるフォルダから、指定する単語が含まれている条項を探す"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.27", features = ["derive"] }
encoding_rs = "0.8.31"
quick-xml = { version = "0.26.0", features = ["async-tokio", "encoding"] }
serde_json = "1.0.89"
tracing = "0.1.37"
tokio = { version = "1.22.0", features = ["full"] }
tokio-stream = "0.1.11"
tracing-subscriber = "0.3.16"
serde = { version = "1.0.147", features = ["derive"] }
listup_law = { git="https://github.com/japanese-law-analysis/listup_law.git", tag="0.3.0" }
